--- a/src/styles/auth/join.module.scss
+++ b/src/styles/auth/join.module.scss
@@ -10,10 +10,10 @@
   box-sizing:border-box;
   h2 {
     font-size: 2em;
-    font-weight: 800;
+    font-weight: bold;
     text-align: center;
     color: $primary;
-    font-weight: 800;
+    font-weight: bold;
     span {
       display: inline-block;
       color: $white;
