--- a/src/styles/auth/login.module.scss
+++ b/src/styles/auth/login.module.scss
@@ -10,7 +10,7 @@
   box-sizing:border-box;
   h2 {
     font-size: 3em;
-    font-weight: 800;
+    font-weight: bold;
     text-align: center;
   }
   form {
