--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,7 +1,7 @@
 @import './variables.scss';
 @import './mixin.scss';
+@import './font.scss';
 @import './reset.css';
-
 //컴포넌트
 * {
   letter-spacing: -0.5px;
