--- a/src/styles/my/liked.module.scss
+++ b/src/styles/my/liked.module.scss
@@ -26,7 +26,7 @@
       }
       p {
         align-self: flex-end;
-        span{font-size: 2.3em; font-weight: 800;}
+        span{font-size: 2.3em; font-weight: bold;}
       }
     }
 
