--- a/src/styles/common/footer.module.scss
+++ b/src/styles/common/footer.module.scss
@@ -14,7 +14,7 @@
         h1{
             font-size: 3em;
             color:$primary;
-            font-weight: 800;
+            font-weight: bold;
         }
         ul{
             display: flex;
