--- a/src/styles/detail/banner.module.scss
+++ b/src/styles/detail/banner.module.scss
@@ -18,6 +18,7 @@
         rgba(0, 0, 0, 1) 100%
       );
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
 }
 .banner_wrap{
     position: relative;
@@ -36,7 +37,7 @@
     max-width: 60%;
     h2{
         font-size: 3em;
-        font-weight: 800;
+        font-weight: bold;
     }
     ul{
         display: flex;
