--- a/src/styles/_font.scss
+++ b/src/styles/_font.scss
@@ -1,17 +1,17 @@
 @font-face {
     font-family: 'LINESeedKR';
     font-weight: light;
-    src: url('/public\font\LINESeedKR-Th.woff2');
+    src: url('/public/font/LINESeedKR-Th.woff2');
 }
 @font-face {
     font-family: 'LINESeedKR';
     font-weight: normal;
-    src: url('/public\font\LINESeedKR-Rg.woff2');
+    src: url('/public/font/LINESeedKR-Rg.woff2');
 }
 @font-face {
     font-family: 'LINESeedKR';
     font-weight: bold;
-    src: url('/public\font\LINESeedKR-Bd.woff2');
+    src: url('/public/font/LINESeedKR-Bd.woff2');
 }
 
 html,body,#root{
