--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -53,3 +53,50 @@ html {
     margin: 0 auto 1em;
   }
 }
+
+@include mobile {
+  body,
+html {
+  background: #000;
+  color: #fff;
+  font-size: 16px;
+  min-height: 100%;
+  height: max-content;
+  #wrap {
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+    height: max-content;
+    .cont_wrap {
+      flex: 1;
+      height: 100%;
+      //padding:1rem;
+    }
+  }
+  .btn {
+    border: none;
+    padding: 1em;
+    border-radius: 0.2em;
+    font-size: 1em;
+    cursor: pointer;
+    box-sizing:border-box;
+  }
+  .btn.btn01 {
+    background: $primary;
+    color: $white;
+  }
+  .btn.btn02 {
+    
+  }
+  .btn.btn03 {
+    font-size: auto;
+    padding: 0;
+    color:$primary;
+    border:none;
+    background: transparent;
+  }
+  .title {
+    font-size: 1.3rem;
+  }
+}
+}
