--- a/src/styles/detail/review.module.scss
+++ b/src/styles/detail/review.module.scss
@@ -38,7 +38,8 @@
       .right_sec {
         display: flex;
         align-items: center;
-        gap: 2em;
+        gap: 1em;
+        min-width: 0;
       }
     }
   }
@@ -61,6 +62,7 @@
   // 리뷰 에디터
   .review_editor {
     margin-top: 5em;
+    box-sizing: border-box;
     .editor {
       width: 100%;
       height: max-content;
@@ -68,6 +70,7 @@
       border-radius: 0.5em;
       .review_top {
         padding-top: 0;
+        min-width: 0;
         .scores_wrap {
           span {
             cursor: pointer;
@@ -75,7 +78,8 @@
         }
         input {
           padding: 7px;
-          width: 170px;
+          max-width: 170px;
+          min-width: 0;
           border-radius: 0.2em;
           border: none;
           background: rgb(255, 255, 255, 0.7);
@@ -92,7 +96,7 @@
           height: 7em;
           border: none;
           border-radius: 0.2em;
-          margin: 1em 0;
+          margin: 1em 0 .5em;
           box-sizing: border-box;
           background: rgb(255, 255, 255, 0.7);
           font-size: 1em;
@@ -102,21 +106,49 @@
           font-size: 12px;
         }
         button {
-          width: 25em;
           margin: 0 auto;
+          width: 80%;
+          max-width: 25rem;
         }
       }
     }
   }
 }
-@include tablet{
-  .reviews_container{
+@include tablet {
+  .reviews_container {
     padding-bottom: 0;
   }
 }
 
-@include mobile{
-  .reviews_container{
+@include mobile {
+  .reviews_container {
     padding-bottom: 0;
+    .review {
+      // 공통 스타일
+      .review_top {
+        font-size: 13px;
+        .scores_wrap {
+          gap: 5px;
+          span {
+          }
+        }
+        .right_sec {
+          gap: 0.5em;
+        }
+      }
+    }
+
+    // 리뷰 에디터
+    .review_editor {
+      margin-top: 5em;
+      box-sizing: border-box;
+      .editor {
+        .review_body {
+          button {
+            width: 100%;
+          }
+        }
+      }
+    }
   }
 }
