--- a/src/styles/detail/actors.module.scss
+++ b/src/styles/detail/actors.module.scss
@@ -41,6 +41,18 @@
 
 @include mobile{
   .actors_container{
-   //padding-top:40px;
+    .actors_wrap {
+      gap:1.3rem;
+      .actor {
+        width: 90px;
+        flex-shrink: 0;
+        .actor_pic {
+          width: 100%;
+          height: 90px;
+        }
+        p {
+        }
+      }
+    }
   }
 }
