--- a/src/styles/home/row.module.scss
+++ b/src/styles/home/row.module.scss
@@ -94,8 +94,21 @@
 
 @include mobile{
   .row{
-    padding: 0 20px;
-    margin:4em 0;
+    padding: 20px 20px;
+    margin:3rem 0;
+    h2{
+      font-size: 1.3rem;
+    }
+    .row_wrap {
+  
+      .row_item {
+        width: 160px;
+  
+        img {
+          width: 100%;
+        }
+      }
+    }
   }
 }
 
