--- a/src/styles/detail/banner.module.scss
+++ b/src/styles/detail/banner.module.scss
@@ -1,91 +1,109 @@
 @import '../variables.scss';
 @import '../mixin.scss';
-.banner{
-    position: relative;
-    width: 100%;
-    height: 550px;
-    padding-top: 200px;
+.banner {
+  position: relative;
+  width: 100%;
+  height: 550px;
+  padding-top: 200px;
 }
-.banner:before{
-    position: absolute;
-    content: '';
-    display: block;
-    inset:0;
-    background: linear-gradient(
-        180deg,
-        rgba(0, 0, 0, 0) 0%,
-        rgba(0, 0, 0, 0.7) 51%,
-        rgba(0, 0, 0, 1) 100%
-      );
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
+.banner:before {
+  position: absolute;
+  content: '';
+  display: block;
+  inset: 0;
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 0.7) 51%,
+    rgba(0, 0, 0, 1) 100%
+  );
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
 }
-.banner_wrap{
-    position: relative;
+.banner_wrap {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+  align-items: flex-start;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+.banner_info {
+  display: flex;
+  flex-direction: column;
+  gap: 2em;
+  max-width: 60%;
+  h2 {
+    font-size: 3rem;
+    font-weight: bold;
+    line-height: 3rem;
+  }
+  ul {
     display: flex;
     flex-direction: row;
-    gap:30px;
-    align-items: center;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding:0 20px;
-}
-.banner_info{
+    gap: 10px;
+    li {
+      padding: 6px;
+      border: 1px solid #fff;
+      border-radius: 3px;
+    }
+    li:first-child {
+      background: #60bde5;
+      color: #000;
+    }
+  }
+  button {
     display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 130px;
+    background: rgb(255, 255, 255, 0.8);
+    border: none;
+    font-size: 1.2em;
+    color: $primary;
+    border-radius: 5px;
+  }
+  p {
+    line-height: 1.6em;
+  }
+}
+.banner_poster {
+  //width: 300px;
+  img {
+    width: 300px;
+    border-radius: 3px;
+  }
+}
+
+@include mobile {
+  .banner {
+    height: auto;
+    padding-top: 130px;
+    padding-bottom: 3rem;
+  }
+  .banner_wrap {
     flex-direction: column;
-    gap:2em;
-    max-width: 60%;
-    h2{
-        font-size: 3em;
-        font-weight: bold;
+    align-items: center;
+    .banner_info {
+      max-width: 100%;
+      gap: 1.3rem;
+      h2 {
+        font-size: 1.7rem;
+      }
+      ul {
+        gap: 5px;
+      }
+      button {
+        padding: 0.8rem;
+      }
     }
-    ul{
-        display: flex;
-        flex-direction: row;
-        gap:10px;
-        li{
-            padding: 6px;
-            border: 1px solid #fff;
-            border-radius: 3px;
-        }
-        li:first-child{
-            background: #60BDE5;
-            color:#000;
-        }
+    .banner_poster {
+      img {
+        width: 250px;
+      }
     }
-    button{
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
-        width: 130px;
-        background: rgb(255,255,255,0.8);
-        border:none;
-        font-size: 1.2em;
-        color:$primary;
-        border-radius: 5px;
-    }
-    p{
-        line-height: 1.6em;
-    }
-}
-.banner_poster{
-    //width: 300px;
-    img{width: 300px; border-radius: 3px;}
-}
-
-
-
-@include mobile{
-    .banner{
-        height:auto;
-        padding-top: 130px;
-        padding-bottom: 130px;
-    }
-    .banner_wrap{
-        flex-direction:column;
-        .banner_info{
-            max-width: 100%;
-        }
-    }
+  }
 }
