--- a/src/styles/detail/trailer.module.scss
+++ b/src/styles/detail/trailer.module.scss
@@ -1,3 +1,4 @@
+@import '../mixin';
 .videos_container {
   max-width: 1000px;
   margin: 7em auto;
@@ -18,6 +19,17 @@
       border-radius: 10px;
       opacity: 0.8;
       transition: opacity 0.2s ease-in-out;
+    }
+  }
+}
+
+@include mobile {
+  .videos_container{
+    margin: 3rem auto;
+    .videos_wrap{
+      iframe{
+
+      }
     }
   }
 }
