--- a/src/styles/auth/join.module.scss
+++ b/src/styles/auth/join.module.scss
@@ -1,13 +1,14 @@
 @import '../variables.scss';
+@import '../mixin.scss';
 .join_container {
   max-width: 450px;
   width: 100%;
-  margin: 10em auto;
-  padding:0 20px;
+  margin: 10em auto 3rem;
+  padding: 0 20px;
   display: flex;
   flex-direction: column;
   gap: 3em;
-  box-sizing:border-box;
+  box-sizing: border-box;
   h2 {
     font-size: 2em;
     font-weight: bold;
@@ -24,7 +25,7 @@
     form {
       display: flex;
       flex-direction: column;
-      gap: .8em;
+      gap: 0.8em;
       input[type='text'],
       input[type='password'] {
         width: 100%;
@@ -36,8 +37,8 @@
         background: rgb(255, 255, 255, 0.1);
         color: $white;
       }
-      p.msg{
-        font-size: .8rem;
+      p.msg {
+        font-size: 0.8rem;
       }
       .agree_wrap {
         .panel {
@@ -46,23 +47,23 @@
           ul {
             width: 100%;
             display: flex;
-              flex-direction: column;
-              gap:1rem;
+            flex-direction: column;
+            gap: 1rem;
             li {
               width: 100%;
               display: flex;
               flex-direction: row;
               justify-content: space-between;
               align-items: center;
-              gap:0.5rem;
+              gap: 0.5rem;
               input[type='checkbox'] {
                 display: none;
               }
-              label{
+              label {
                 cursor: pointer;
               }
               span {
-                flex:1;
+                flex: 1;
               }
             }
           }
@@ -73,6 +74,48 @@
         padding: 1.2em;
         font-size: 1.2em;
         box-sizing: border-box;
+      }
+    }
+  }
+}
+
+@include mobile {
+  .join_container {
+    h2 {
+      span {
+        display: inline-block;
+        color: $white;
+        font-size: 0.7em !important;
+      }
+    }
+    .join_wrap {
+      form {
+        gap: 0.8em;
+        margin: 0 auto;
+        input[type='text'],
+        input[type='password'] {
+          width: 90%;
+          padding: 1rem;
+          margin: 0 auto;
+        }
+        .agree_wrap {
+          width: 90%;
+          margin: 0 auto;
+          .panel {
+            ul {
+              gap: 0.8rem;
+              li {
+                font-size: 0.9rem;
+              }
+            }
+          }
+        }
+        button {
+          width: 90%;
+          margin: 0 auto;
+          padding: 1rem;
+          font-size: 15px;
+        }
       }
     }
   }
