--- a/src/styles/common/arrow.module.scss
+++ b/src/styles/common/arrow.module.scss
@@ -1,3 +1,5 @@
+
+@import '../mixin';
 .arrow {
   position: absolute;
   bottom: 0;
@@ -14,4 +16,16 @@
 }
 .next {
   right: 1em;
+}
+
+@include tablet{
+  .arrow{
+    display: none;
+  }
+}
+
+@include mobile{
+  .arrow{
+    display: none;
+  }
 }
