--- a/src/styles/common/footer.module.scss
+++ b/src/styles/common/footer.module.scss
@@ -6,6 +6,7 @@
     gap: 20px;
     padding: 5em;
     border-top: 1px solid $dgrey;
+    font-size:.9rem;
     .footer_top{
         display: flex;
         flex-direction: row;
