--- a/src/styles/common/header.module.scss
+++ b/src/styles/common/header.module.scss
@@ -7,7 +7,7 @@
   width: 100%;
   height: 100px;
   padding: 0 20px;
-  background: rgb(0, 0, 0, 0.6);
+  background: transparent;
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   border-bottom: 1px solid rgb(255, 255, 255, 0.2);
@@ -64,5 +64,5 @@
 .show {
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
-  background: transparent;
+  background: rgb(0,0,0,.5);
 }
