--- a/src/styles/home/row.module.scss
+++ b/src/styles/home/row.module.scss
@@ -98,7 +98,7 @@
     padding: 20px 20px;
     margin:3rem 0;
     h2{
-      font-size: 1.3rem;
+      font-size: 1.3rem !important;
     }
     .row_wrap {
       .row_item {
