--- a/src/styles/modal/modal.module.scss
+++ b/src/styles/modal/modal.module.scss
@@ -12,18 +12,18 @@
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
     width: 60%;
-    max-width: 800px;
-    height: 800px;
+    max-width: auto;
+    height: auto;
     z-index: 10;
     border-radius: 1.7em;
     overflow: hidden;
-    box-shadow: 0 3px 40px rgb(0,0,0,70%);
+    box-shadow: 0 3px 40px rgb(0, 0, 0, 70%);
     img {
       width: 100%;
     }
 
     .modal_content {
-      flex:1;
+      flex: 1;
       display: flex;
       flex-direction: column;
       gap: 20px;
@@ -39,7 +39,7 @@
         li {
           padding: 6px;
           border: 1px solid #fff;
-          border-radius: .2em;
+          border-radius: 0.2em;
         }
         li:first-child {
           background: #60bde5;
@@ -55,15 +55,15 @@
       flex-direction: row;
       gap: 20px;
       padding: 2em;
-      button{
+      button {
         cursor: pointer;
       }
       button:first-child {
         display: flex;
         flex-direction: row;
         align-items: center;
-        justify-content:center;
-        gap:5px;
+        justify-content: center;
+        gap: 5px;
         width: 20%;
         border: 1px solid $primary;
         border-radius: 0.2em;
@@ -71,11 +71,11 @@
         font-size: 1em;
       }
       button:first-child + a {
-        display:block;
+        display: block;
         flex: 1;
         font-size: 1em;
-        button{
-          color:#fff;
+        button {
+          color: #fff;
           width: 100%;
         }
       }
@@ -93,12 +93,24 @@
   z-index: 10;
 }
 
-.close_btn{
-    position: absolute;
-    top: 5px;
-    right: 5px;
-    z-index: 11;
-    background: transparent;
-    border:none;
-    cursor: pointer;
+.close_btn {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  z-index: 11;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+@include mobile {
+  .wrapper_modal {
+    .modal {
+      width: 85%;
+      .btn_box{
+        button{
+        }
+      }
+    }
+  }
 }
