--- a/src/styles/my/liked.module.scss
+++ b/src/styles/my/liked.module.scss
@@ -5,7 +5,7 @@
 .profile_container {
   width: 100%;
   background: rgb(255,255,255,.1);
-  padding: 10em 0 3.3em;
+  padding: 110px 0 40px;
   box-sizing: border-box;
   
   .profile_wrap {
@@ -23,6 +23,7 @@
         height: 130px;
         background: $primary;
         align-self: center;
+        border-radius: 10px;
       }
       p {
         align-self: flex-end;
@@ -43,7 +44,7 @@
   width: 80%;
   max-width: 1000px;
   display: grid;
-  margin: 10em auto;
+  margin: 5em auto;
   grid-template-columns: repeat(auto-fill, minmax(15%, auto));
   gap: 2em;
   box-sizing: border-box;
@@ -54,6 +55,7 @@
     overflow: hidden;
     img {
       width: 100%;
+      height: 100%;
     }
     button{
       background: transparent;
@@ -72,24 +74,42 @@
 
 @include mobile{
   .profile_container{
-    padding: 8rem 20px 2rem;
+    padding: 100px 20px 30px;
+    .profile_wrap {
+      .left_sec {
+        .thum {
+          width: 90px;
+          height: 90px;
+          img{ width: 90px; height:90px;}
+        }
+        p {
+          span{font-size: 1.7rem; }
+        }
+      }
+  
+      .right_sec {
+        .setting {
+        }
+      }
+    }
   }
   .liked {
     width: 100%;
-    margin: 3em auto;
+    margin: 2em auto;
     padding: 0 20px;
-    grid-template-columns: repeat(auto-fill, minmax(20%, auto));
+    gap:1rem;
+    grid-template-columns: repeat(auto-fill, minmax(25%, auto));
   }
 }
 
 @include tablet{
   .profile_container{
-    padding: 8rem 20px 2rem;
+    padding: 100px 20px 30px;
   }
   .liked {
     width: 100%;
-    margin: 3em auto;
-    padding: 0 40px;
-    grid-template-columns: repeat(auto-fill, minmax(18%, auto));
+    margin: 4em auto;
+    padding: 0 20px;
+    grid-template-columns: repeat(auto-fill, minmax(15%, auto));
   }
 }
