--- a/src/styles/common/header.module.scss
+++ b/src/styles/common/header.module.scss
@@ -6,7 +6,7 @@
   left: 0;
   width: 100%;
   height: 70px;
-  padding: 0 20px;
+  padding: 0 1rem;
   background: transparent;
   border-bottom: 1px solid rgb(255, 255, 255, 0.2);
   box-sizing: border-box;
@@ -25,9 +25,14 @@
   h1 {
     color: $primary;
     font-weight: bold;
-    img {
-      width: 100%;
+    a{
+      display: block;
+      height: 36px;
+      img {
+        width: 100%;
+      }
     }
+    
   }
   .right_header {
     flex: 1;
