--- a/src/styles/common/header.module.scss
+++ b/src/styles/common/header.module.scss
@@ -27,9 +27,10 @@
     font-weight: bold;
     a{
       display: block;
-      height: 36px;
+      height: 30px;
       img {
         width: 100%;
+        vertical-align: bottom;
       }
     }
     
