--- a/src/styles/home/row.module.scss
+++ b/src/styles/home/row.module.scss
@@ -130,7 +130,7 @@
     padding: 20px 20px;
     margin: 1rem 0;
     h2 {
-      font-size: 1rem !important;
+      font-size: 20.8px !important;
       margin-bottom: 1rem;
     }
     .row_wrap {
