--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -47,7 +47,7 @@ html {
     background: transparent;
   }
   .title {
-    font-size: 1.6em;
+    font-size: 1.6rem;
     font-weight: bold;
     max-width: 1000px;
     margin: 0 auto 1em;
