--- a/src/styles/home/row.module.scss
+++ b/src/styles/home/row.module.scss
@@ -8,8 +8,8 @@
   h2 {
     width: 1000px;
     margin: 0 auto;
-    margin-bottom: 1.4em;
-    font-size: 1.6em;
+    margin-bottom: 1.6rem;
+    font-size: 1.6rem;
     font-weight: bold;
   }
   .row_wrap {
