--- a/src/styles/modal/modal.module.scss
+++ b/src/styles/modal/modal.module.scss
@@ -33,7 +33,7 @@
       gap: 20px;
       padding: 2em;
       .modal_title {
-        font-size: 1.6em;
+        font-size: 1.6rem;
         font-weight: bold;
       }
       ul {
