--- a/src/styles/auth/join.module.scss
+++ b/src/styles/auth/join.module.scss
@@ -29,7 +29,7 @@
       input[type='text'],
       input[type='password'] {
         width: 100%;
-        padding: 1.6em;
+        padding: 1.6rem;
         font-size: 1em;
         box-sizing: border-box;
         border: none;
