--- a/src/styles/detail/review.module.scss
+++ b/src/styles/detail/review.module.scss
@@ -13,7 +13,7 @@
     width: 100%;
     height: 8em;
     padding: 1em;
-    margin: 0 auto 1.6em;
+    margin: 0 auto 1.6rem;
     background: rgb(255, 255, 255, 0.12);
     border-radius: 0.5em;
     box-sizing: border-box;
