--- a/src/styles/detail/review.module.scss
+++ b/src/styles/detail/review.module.scss
@@ -15,7 +15,7 @@
     padding: 1em;
     margin: 0 auto 1.6rem;
     background: rgb(255, 255, 255, 0.12);
-    border-radius: 0.5em;
+    border-radius: 0.3rem;
     box-sizing: border-box;
 
     // 공통 스타일
