--- a/src/styles/home/row.module.scss
+++ b/src/styles/home/row.module.scss
@@ -2,7 +2,7 @@
 
 .row {
   position: relative;
-  margin: 6em 0;
+  margin: 3rem 0;
   padding: 1rem 0;
   overflow: hidden;
   h2 {
@@ -30,10 +30,12 @@
     .row_item {
       width: 300px;
       flex-shrink: 0;
+      
       cursor: pointer;
 
       img {
         width: 100%;
+        border-radius: .3rem;
       }
     }
   }
@@ -50,7 +52,7 @@
       rgba(0, 0, 0, 0) 100%
     );
     height: 100%;
-    width: 100px;
+    width: 60px;
     z-index: 1;
   }
   &::after {
@@ -66,7 +68,7 @@
       rgba(0, 0, 0, 0) 100%
     );
     height: 100%;
-    width: 100px;
+    width: 60px;
     z-index: 0;
   }
 }
@@ -86,6 +88,7 @@
   }
   img {
     width: 100%;
+    border-radius: .3rem;
   }
   &::before { display: none;}
   &::after { display: none;}
@@ -128,9 +131,9 @@
 @include mobile {
   .row {
     padding: 20px 20px;
-    margin: 1rem 0;
+    margin: 0;
     h2 {
-      font-size: 20.8px !important;
+      font-size: 1.2rem !important;
       margin-bottom: 1rem;
     }
     .row_wrap {
@@ -145,12 +148,12 @@
   }
   .row.big {
     .row_item {
-      width: 130px;
+      width: 120px;
     }
   }
 
   .row.slide {
-    margin: 1rem 0;
+    margin: 0;
     padding: 20px 20px;
     h2 {
       display: block;
