--- a/src/styles/modal/modal.module.scss
+++ b/src/styles/modal/modal.module.scss
@@ -33,7 +33,7 @@
       gap: 20px;
       padding: 2em;
       .modal_title {
-        font-size: 1.6rem;
+        font-size: 1.4rem;
         font-weight: bold;
       }
       ul {
@@ -50,8 +50,8 @@
         }
       }
       .modal_overview {
-        font-size: 1em;
-        line-height: 1.5em;
+        font-size: 1rem;
+        line-height: 1.5rem;
       }
     }
     .btn_box {
