--- a/src/styles/my/liked.module.scss
+++ b/src/styles/my/liked.module.scss
@@ -51,7 +51,7 @@
   > .row_item {
     position:relative;
     cursor: pointer;
-    border-radius: 0.5em;
+    border-radius: 0.3rem;
     overflow: hidden;
     img {
       width: 100%;
@@ -63,6 +63,7 @@
       position:absolute;
       top:0;
       right: 0;
+      padding: .2rem;
     }
   }
 }
@@ -83,7 +84,7 @@
           img{ width: 90px; height:90px;}
         }
         p {
-          span{font-size: 1.7rem; }
+          span{font-size: 1.4rem; }
         }
       }
   
