--- a/src/styles/search/search.module.scss
+++ b/src/styles/search/search.module.scss
@@ -9,7 +9,7 @@
     box-sizing: border-box;
     > div{
         cursor:pointer;
-        border-radius:.5em;
+        border-radius:.3rem;
         overflow:hidden;
         img{
             width: 100%;
