--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -5,6 +5,7 @@
 //컴포넌트
 * {
   letter-spacing: -0.5px;
+  -webkit-text-size-adjust: none;
 }
 body,
 html {
@@ -94,7 +95,7 @@ html {
       background: transparent;
     }
     .title {
-      font-size: 1.3rem;
+      font-size: 1.2rem;
     }
   }
 }
