--- a/src/styles/common/header.module.scss
+++ b/src/styles/common/header.module.scss
@@ -27,9 +27,8 @@
     font-weight: bold;
     a {
       display: block;
-      height: 30px;
       img {
-        width: 100%;
+        width: 75px;
         vertical-align: bottom;
       }
     }
