--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -1,7 +1,7 @@
-@import './variables';
+@import "./variables";
 
 @mixin mobile {
-  @media (min-width: #{$breakpoint-mobile}) and (max-width: #{$breakpoint-tablet - 1px}) {
+  @media (min-width: 0px) and  (max-width: #{$breakpoint-tablet - 1px}) {
     @content;
   }
 }
