--- a/src/styles/detail/banner.module.scss
+++ b/src/styles/detail/banner.module.scss
@@ -1,5 +1,5 @@
-@import '../variables.scss';
-@import '../mixin.scss';
+@import "../variables.scss";
+@import "../mixin.scss";
 .banner {
   position: relative;
   width: 100%;
@@ -8,7 +8,7 @@
 }
 .banner:before {
   position: absolute;
-  content: '';
+  content: "";
   display: block;
   inset: 0;
   background: linear-gradient(
@@ -33,7 +33,7 @@
 .banner_info {
   display: flex;
   flex-direction: column;
-  gap: 2em;
+  gap: 2rem;
   max-width: 60%;
   h2 {
     font-size: 3rem;
@@ -45,9 +45,10 @@
     flex-direction: row;
     gap: 10px;
     li {
-      padding: 6px;
+      padding: 6px 8px 4px;
       border: 1px solid #fff;
-      border-radius: 3px;
+      border-radius: 0.2rem;
+      font-size: 0.9rem;
     }
     li:first-child {
       background: #60bde5;
@@ -62,19 +63,20 @@
     width: 130px;
     background: rgb(255, 255, 255, 0.8);
     border: none;
-    font-size: 1.2em;
+    font-size: 1.1rem;
     color: $primary;
     border-radius: 5px;
   }
   p {
-    line-height: 1.6rem;
+    line-height: 1.7rem;
+    font-size: 1.1rem;
   }
 }
 .banner_poster {
   //width: 300px;
   img {
     width: 300px;
-    border-radius: 3px;
+    border-radius: 0.2rem;
   }
 }
 
