--- a/src/styles/detail/review.module.scss
+++ b/src/styles/detail/review.module.scss
@@ -1,18 +1,18 @@
-@import '../variables.scss';
-@import '../mixin.scss';
+@import "../variables.scss";
+@import "../mixin.scss";
 .reviews_container {
   max-width: 1000px;
-  margin: 7em auto;
+  margin: 7rem auto;
   padding: 0 20px 40px;
 
   // 리뷰 리스트
   .review {
     display: flex;
     flex-direction: column;
-    gap: 1em;
+    gap: 1rem;
     width: 100%;
-    height: 8em;
-    padding: 1em;
+    height: 8rem;
+    padding: 1rem;
     margin: 0 auto 1.6rem;
     background: rgb(255, 255, 255, 0.12);
     border-radius: 0.3rem;
@@ -24,7 +24,7 @@
       flex-direction: row;
       justify-content: space-between;
       align-items: center;
-      padding: 0.2em 0 0.8em;
+      padding: 0.2rem 0 0.8rem;
       border-bottom: 1px solid rgb(255, 255, 255, 0.3);
       .scores_wrap {
         display: flex;
@@ -38,7 +38,7 @@
       .right_sec {
         display: flex;
         align-items: center;
-        gap: 1em;
+        gap: 1rem;
         min-width: 0;
       }
     }
@@ -55,19 +55,19 @@
   }
   .no_review {
     text-align: center;
-    padding: 3em;
+    padding: 3rem;
     color: $grey;
   }
 
   // 리뷰 에디터
   .review_editor {
-    margin-top: 5em;
+    margin-top: 5rem;
     box-sizing: border-box;
     .editor {
       width: 100%;
       height: max-content;
       background: rgb(255, 255, 255, 0.12);
-      border-radius: 0.5em;
+      border-radius: 0.3rem;
       .review_top {
         padding-top: 0;
         min-width: 0;
@@ -80,7 +80,7 @@
           padding: 7px;
           max-width: 170px;
           min-width: 0;
-          border-radius: 0.2em;
+          border-radius: 0.2rem;
           border: none;
           background: rgb(255, 255, 255, 0.7);
           box-sizing: border-box;
@@ -93,15 +93,17 @@
         text-align: center;
         textarea {
           width: 100%;
-          height: 7em;
+          height: 7rem;
           border: none;
-          border-radius: 0.2em;
-          margin: 1em 0 .5em;
+          border-radius: 0.2rem;
+          margin: 1rem 0 0.5rem;
           box-sizing: border-box;
           background: rgb(255, 255, 255, 0.7);
-          font-size: 1em;
+          font-size: 1rem;
         }
         span {
+          display: block;
+          padding-bottom: 0.4rem;
           align-self: flex-end;
           font-size: 12px;
         }
@@ -134,14 +136,14 @@
           }
         }
         .right_sec {
-          gap: 0.5em;
+          gap: 0.5rem;
         }
       }
     }
 
     // 리뷰 에디터
     .review_editor {
-      margin-top: 5em;
+      margin-top: 5rem;
       box-sizing: border-box;
       .editor {
         .review_body {
