--- a/src/styles/common/header.module.scss
+++ b/src/styles/common/header.module.scss
@@ -8,11 +8,28 @@
   height: 70px;
   padding: 0 1rem;
   background: transparent;
-  border-bottom: 1px solid rgb(255, 255, 255, 0.2);
   box-sizing: border-box;
   z-index: 10;
   transition: all 0.3s;
   box-sizing: border-box;
+  &::before {
+    display: block;
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 30vw;
+    max-height: 100px;
+    background: linear-gradient(
+      180deg,
+      rgba(0, 0, 0, 0.9) 37%,
+      rgba(0, 0, 0, 0.6) 69%,
+      rgba(0, 0, 0, 0.35) 85%,
+      rgba(255, 255, 255, 0) 100%
+    );
+    z-index: -2;
+  }
 
   .header_wrap {
     display: flex;
@@ -36,52 +53,63 @@
     flex: 1;
     display: flex;
     justify-content: flex-end;
-    gap: 0.5rem;
+    gap: 0.8rem;
     flex-shrink: 0;
     min-width: 0;
     div.input {
       position: relative;
       border-radius: 100px;
+      zoom: 1;
 
       input {
+        width: 0;
+        background: rgba(255, 255, 255, 0.2);
+        border-radius: 2px;
         max-width: 140px;
-        height: 35px;
+        height: 30px;
         min-width: 0;
-        background: $dgrey;
         color: $white;
-        padding: 0 0.5rem;
-        border-radius: 100px;
+        padding: 0;
         border: none;
         box-sizing: border-box;
         font-size: 1rem;
+        outline: 0;
+        transition: all 0.2s linear;
+        float: right;
+      }
+      input.show {
+        width: 100%;
+        padding: 0 0.5rem;
       }
       svg {
         position: absolute;
         right: 0.5rem;
         top: 47%;
         transform: translateY(-50%);
+        cursor: pointer;
+      }
+      &::after {
+        display: block;
+        position: absolute;
+        content: "";
+        clear: both;
       }
     }
 
     .profile_state {
       background: $primary;
-      width: 35px;
-      height: 35px;
-      line-height: 35px;
+      width: 30px;
+      height: 30px;
+      line-height: 30px;
       text-align: center;
       font-weight: bold;
-      border-radius: 7px;
+      border-radius: 3px;
     }
     .login_state {
-      width: 35px;
-      height: 35px;
-      line-height: 35px;
+      width: 30px;
+      height: 30px;
+      line-height: 30px;
       color: #fff;
     }
   }
-}
-.show {
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
-  //background: rgb(0,0,0,.5);
 }
