--- a/src/styles/home/row.module.scss
+++ b/src/styles/home/row.module.scss
@@ -1,12 +1,12 @@
-@import '../mixin.scss';
+@import "../mixin.scss";
 
 .row {
   position: relative;
   margin: 3rem 0;
-  padding: 1rem 0;
+  padding: 1rem 0 1rem 1rem;
   overflow: hidden;
   h2 {
-    width: 1000px;
+    width: 1200px;
     margin: 0 auto;
     margin-bottom: 1.6rem;
     font-size: 1.6rem;
@@ -16,10 +16,10 @@
     position: relative;
     display: flex;
     flex-direction: row;
-    flex-basis: 300px;
     align-items: center;
     gap: 20px;
     overflow-x: scroll;
+    overflow-y: hidden;
     -ms-overflow-style: none;
     scrollbar-width: none;
     scroll-behavior: smooth;
@@ -28,109 +28,81 @@
     }
 
     .row_item {
-      width: 300px;
+      flex-basis: 210px;
       flex-shrink: 0;
-      
+      height: 300px;
       cursor: pointer;
-
       img {
         width: 100%;
-        border-radius: .3rem;
+        height: 100%;
+        border-radius: 0.3rem;
+        object-fit: cover;
       }
     }
   }
-  &::before {
-    display: block;
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 0;
-    background: linear-gradient(
-      90deg,
-      rgba(0, 0, 0, 1) 0%,
-      rgba(0, 0, 0, 0.7) 51%,
-      rgba(0, 0, 0, 0) 100%
-    );
-    height: 100%;
-    width: 60px;
-    z-index: 1;
-  }
-  &::after {
-    display: block;
-    content: '';
-    position: absolute;
-    right: 0;
-    top: 0;
-    background: linear-gradient(
-      270deg,
-      rgba(0, 0, 0, 1) 0%,
-      rgba(0, 0, 0, 0.7) 51%,
-      rgba(0, 0, 0, 0) 100%
-    );
-    height: 100%;
-    width: 60px;
-    z-index: 0;
-  }
 }
-.row.big {
-  .row_item {
-    width: 210px;
-    img {
-      width: 100%;
-    }
-  }
-}
+
 .row.slide {
-  padding: 20px 100px;
-  margin: -100px 50px 100px;
+  padding: 1rem 0 1rem 1rem;
+  margin: -100px auto 50px;
+  max-width: 1400px;
   h2 {
     display: none;
   }
-  img {
-    width: 100%;
-    border-radius: .3rem;
+  .row_wrap {
+    .slide_item {
+      width: 100%;
+      padding-top: 26%;
+      position: relative;
+      overflow: hidden;
+      @include tablet {
+        padding-top: 36%;
+      }
+      @include mobile {
+        padding-top: 48%;
+      }
+      a {
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          border-radius: 0.3rem;
+        }
+      }
+    }
   }
-  &::before { display: none;}
-  &::after { display: none;}
 }
 
 @include tablet {
   .row {
-    padding: 20px 20px;
     margin: 3rem 0;
     h2 {
       font-size: 1.3rem !important;
     }
     .row_wrap {
       .row_item {
-        width: 200px;
-
-        img {
-          width: 100%;
-        }
+        flex-basis: 160px;
+        height: 230px;
       }
-    }
-  }
-  .row.big {
-    .row_item {
-      width: 160px;
     }
   }
 
   .row.slide {
     margin: 1rem 0;
-    padding: 20px 20px;
     h2 {
       display: block;
     }
-    &::before { display: block;}
-    &::after { display: block;}
   }
 }
 
 @include mobile {
   .row {
-    padding: 20px 20px;
     margin: 0;
     h2 {
       font-size: 1.2rem !important;
@@ -138,27 +110,16 @@
     }
     .row_wrap {
       .row_item {
-        width: 200px;
-
-        img {
-          width: 100%;
-        }
+        flex-basis: 120px;
+        height: 180px;
       }
-    }
-  }
-  .row.big {
-    .row_item {
-      width: 120px;
     }
   }
 
   .row.slide {
     margin: 0;
-    padding: 20px 20px;
     h2 {
       display: block;
     }
-    &::before { display: block;}
-    &::after { display: block;}
   }
 }
