--- a/src/styles/common/topbutton.module.scss
+++ b/src/styles/common/topbutton.module.scss
@@ -2,10 +2,10 @@
 
 .top_btn {
   position: fixed;
-  bottom: 50px;
-  right: 50px;
-  width: 50px;
-  height: 50px;
+  bottom: 5vw;
+  right: 3vw;
+  width: 40px;
+  height: 40px;
   border: none;
   background: rgba(255, 255, 255, 0.2);
   border-radius: 100%;
