--- a/src/styles/common/topbutton.module.scss
+++ b/src/styles/common/topbutton.module.scss
@@ -12,4 +12,10 @@
   z-index: 900;
   cursor: pointer;
   text-align: center;
+  svg {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
 }
